# mandelbrot

./: .gitignore  CMakeLists.txt
doc/bouml/: 128002.diagram  2.session  bouml.prj
src/: AbstractFractaleAlgo.cpp  AbstractFractaleAlgo.h  ColorScale.cpp  ColorScale.h  ColorScale_test.cpp  FractaleAlgo.cpp  FractaleAlgo.h  FractaleImage.cpp  FractaleImage.h  FractaleWindow.cpp  FractaleWindow.h  JuliaFractaleAlgo.cpp  JuliaFractaleAlgo.h  MandelbrotFractaleAlgo.cpp  MandelbrotFractaleAlgo.h  main.cpp
